@@ -25,10 +25,9 @@ static int get_tick_interval(monikor_t *mon) {
 int monikor_run(monikor_t *mon) {
   struct timeval interval;
   struct timeval now;
-  time_t next_update;
   int tick;
 
-  next_update = time(NULL);
+  monikor_update_init(mon);
   tick = get_tick_interval(mon);
   while (42) {
     if (mon->flags & MONIKOR_FLAG_RELOAD) {
@@ -37,11 +36,11 @@ int monikor_run(monikor_t *mon) {
       tick = get_tick_interval(mon);
     }
     gettimeofday(&now, NULL);
-    next_update += tick;
+    mon->update.next_update += tick;
     // next_update + tick might be greater than now.tv_sec when the process was stopped or traced
-    if (next_update < now.tv_sec) {
+    if (mon->update.next_update < now.tv_sec) {
       monikor_log(LOG_WARNING, "We shifted too much, rebasing next_update to now\n");
-      next_update = now.tv_sec;
+      mon->update.next_update = now.tv_sec;
     }
     monikor_poll_modules(mon, &now);
     if (monikor_logger_level() <= LOG_DEBUG)
@@ -50,12 +49,11 @@ int monikor_run(monikor_t *mon) {
     do {
       gettimeofday(&now, NULL);
       // We cannot have negative timeouts so we put at least 10us
-      interval.tv_sec = next_update > now.tv_sec ? next_update - now.tv_sec : 0;
+      interval.tv_sec = mon->update.next_update > now.tv_sec ? mon->update.next_update - now.tv_sec : 0;
       interval.tv_usec = interval.tv_sec ? 0 : 10;
       if (monikor_io_handler_poll(&mon->io_handlers, &interval) == -1)
         monikor_log(LOG_ERR, "Error in select(2): %s\n", strerror(errno));
-
-    } while (now.tv_sec < next_update);
+    } while (now.tv_sec < mon->update.next_update);
   }
   return 0;
 }
