@@ -88,12 +88,17 @@ static void handle_server_response(monikor_curl_handler_t *handler, CURLcode res
     monikor_log(LOG_ERR, "Send metrics failed with code %d: %s\n", http_code, data->response);
   } else {
     monikor_log(LOG_INFO, "Metrics successfully sent\n");
+    monikor_update_success(data->mon);
   }
   // Cache metrics only if we got a 5xx error as 4xx errors are for rejected push due to auth failures
   if (result != CURLE_OK || http_code >= 500) {
     monikor_log(LOG_INFO, "Caching %zu metrics (%zuB)\n",
       data->metrics->size, data->metrics->data_size);
     monikor_metric_list_concat(data->mon->metrics->cache, data->metrics);
+    // We consider the update a success since we do not want to backoff when server is down
+    monikor_update_success(data->mon);
+  } else if (http_code >= 400) {
+    monikor_update_backoff(data->mon);
   }
   monikor_metric_list_free(data->metrics);
   curl_slist_free_all(data->headers);
